  * **New**: **Task** class is now mixed in with **ReferenceMixin** making it
    unnecessary to have **Asset**, **Shot** and **Sequence** classes all mixed
    in individually. Thus removed the **ReferenceMixin** from **Asset**,
    **Shot** and **Sequence** classes.
  * **Update**: Added **Task.schedule_model** validation and its tests.

0.2.0.b5
========

* **SOM**:

  * **New:** **Version** class now has two new attributes called ``parent`` and
    ``children`` which will be used in tracking of the history of Version
    instances and track which Versions are derived from which Version.
  * **New:** **Versions** instances are now derived from **Link** class and not
    **Entity**.
  * **Update:** Added new revisions to **alembic** to reflect the change in
    **Versions** table.
  * **Update:** **Links.path** is renamed to **Links.full_path** and added
    three new attributes called **path**, **filename** and **extension**.
  * **Update:** Added new revisions to alembic to reflect the change in
    **Links** table.
  * **New:** Added a new class called **LocalSession** to store session data in
    users local filesystem. It is going to be replaced with some other system
    like **Beaker**.
  * **Fix:** Database part of Stalker can now be imported without depending to
    **Pyramid**.
  * **Fix:** Fixed documentation errors that **Sphinx** complained about.

0.2.0.b4
========

* **WebUI**:

  * **Fix:** Fixed the error in rendering of the **home** occurred when there is no
    user login information found in the request.
  * **New:** User thumbnails now can be changed.
  * **New:** Project thumbnails now can be changed.
  * **New:** ``content_list_projects`` now shows the project thumbnails.
  * **New:** ``content_list_users`` now shows the user thumbnails.
  * **New:** ``submitForm.js`` now enables all the disabled fields of the given
    form, and disables them back again upon error.